<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.Fragment_LoginRegister">

    <ImageView
        android:layout_width="94dp"
        android:layout_height="108dp"
        android:layout_centerInParent="true"
        android:src="@drawable/logo"
        android:id="@+id/logoFragmentLoginRegister"/>
    <RelativeLayout
        android:padding="30dp"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:textAllCaps="false"
            android:id="@+id/bottonSignUp"
            android:layout_width="match_parent"
            android:theme="@style/buttonstyle1"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/sign_up"
            android:background="@drawable/border_button_awal"
            android:layout_height="40dp"/>
        <Button
            android:textAllCaps="false"
            android:id="@+id/bottonSignIn"
            android:layout_below="@id/bottonSignUp"
            android:layout_width="match_parent"
            android:layout_marginTop="12sp"
            android:text="@string/sign_in"
           style="@style/Widget.AppCompat.Button.Colored"
            android:background="@drawable/border_button_awal"
            android:layout_height="40dp"/>
        <TextView
            android:textSize="12dp"
            android:id="@+id/skip_loginRegister"
            android:layout_below="@id/bottonSignIn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/hijau"
            android:text="@string/skip_login"/>
    </RelativeLayout>
</RelativeLayout>