<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:Android="http://schemas.android.com/tools"
    android:layout_below="@id/cariApoteker_home"
    app:cardCornerRadius="8dp"
    android:layout_width="145dp"
    android:layout_height="213dp"
    android:layout_marginLeft="16dp"
    app:cardElevation="4dp"
    >
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="145dp"
            android:layout_height="141dp"
            android:src="@drawable/contoh_foto"
            android:id="@+id/foto_list_chat_apoteker_home"
            />
        <RelativeLayout
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_below="@+id/foto_list_chat_apoteker_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/nama_list_chat_apoteker_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20px"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="Apt. St. Chadijah, S.Farm"
                />
            <RatingBar
                android:id="@+id/rating_list_chat_apoteker_home"
                android:layout_marginTop="4dp"
                android:layout_below="@id/nama_list_chat_apoteker_home"
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:numStars="5"
                android:rating="5"
                android:stepSize="0.5"
                style="?android:attr/ratingBarStyleSmall"
                android:isIndicator="false"
                Android:transformPivotX="0dp"
                android:scaleX="0.8"
                android:theme="@style/RatingBar"
                android:progressTint="@color/golden"
                android:scaleY="0.8"
                />

            <TextView
                android:id="@+id/nilai_list_chat_apoteker_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/nama_list_chat_apoteker_home"
                android:layout_marginTop="4dp"
                android:layout_toRightOf="@+id/rating_list_chat_apoteker_home"
                android:text="5.0"
                android:textSize="20px" />
            <ImageView
                android:layout_marginTop="4dp"
                android:id="@+id/icon_pengalaman_list_chat_apoteker_home"
                android:layout_width="15dp"
                android:layout_height="17dp"
                android:layout_below="@id/rating_list_chat_apoteker_home"
                android:src="@drawable/icon_pengalaman"/>

            <TextView
                android:layout_marginTop="7dp"
                android:id="@+id/pengalaman_list_chat_apoteker_home"
                android:layout_marginLeft="3dp"
                android:layout_below="@id/rating_list_chat_apoteker_home"
                android:layout_toRightOf="@+id/icon_pengalaman_list_chat_apoteker_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20px"
                android:text="@string/_5"
                />
            <TextView
                android:layout_marginTop="7dp"
                android:layout_marginLeft="3dp"
                android:layout_below="@id/rating_list_chat_apoteker_home"
                android:layout_toRightOf="@+id/pengalaman_list_chat_apoteker_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20px"
                android:text="@string/tahun"
                />
            <Button
            android:layout_marginTop="4dp"
            android:id="@+id/bottonLogin"
            android:layout_below="@id/rating_list_chat_apoteker_home"
            android:layout_width="48dp"
            android:layout_height="19dp"
            android:background="@drawable/border_button_cari_apoteker"
            android:textColor="@color/putih"
            android:text="@string/chat"
            android:textAllCaps="false"
            android:textSize="10sp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="8dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="8dp"
            />
        </RelativeLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>